--- a/server/nixpacks.toml
+++ b/server/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs-18_x"]
 
 [phases.install]
-cmds = ["npm ci --production=false"]
+cmds = ["npm install"]
 
 [phases.build]
 cmds = ["npm run build"]
